contact page and dark mode bugs fixed

--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -1,40 +1,53 @@
 .container {
+}
+
+.title {
+  font-size: 60px;
+  margin-bottom: 100px;
+  text-align: center;
+}
+
+.content {
   display: flex;
   align-items: center;
   gap: 100px;
 }
 
-.item {
+.imgContainer {
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-
-.title {
-  font-size: 72px;
-  background: linear-gradient(to bottom, #194c33, #bbb);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.img {
-  width: 100%;
   height: 500px;
+  position: relative;
+}
+
+.image {
   object-fit: contain;
-  animation: move 3s infinite ease alternate;
+  /* animation: move 3s infinite ease alternate; */
 }
 
 @keyframes move {
   from {
-    transform: translateY(-10px);
+    transform: translateY(-15px);
   }
   to {
-    transform: translateY(10px);
+    transform: translateY(0px) scale(1.03);
   }
 }
 
-.desc {
-  font-size: 24px;
-  font-weight: 300;
+.form {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.input,
+.textArea {
+  padding: 20px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: #bbb;
+  border: 3px solid #bbb;
+  font-size: 20px;
+  font-weight: bold;
 }
