--- a/src/components/DarkModeToggle/darkModeToggle.module.css
+++ b/src/components/DarkModeToggle/darkModeToggle.module.css
@@ -1,8 +1,8 @@
 .darkContainer {
-  /* width: 42px;
+  width: 42px;
   height: 24px;
   border: 1.5px solid #53c28b70;
-  border-radius: 30px; */
+  border-radius: 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
